--- a/studentInfoService.properties
+++ b/studentInfoService.properties
@@ -1,5 +1,5 @@
-db.uri : https:/exemple.com
-db.name : superBD
-db.login : admin
-db.pwd : 1234
+db.uri=https:/exemple.com
+db.name=superBD
+db.login=admin
+db.pwd=1234
 server.port=8088
